--- a/index.html
+++ b/index.html
@@ -1,11 +1,52 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Demo Page</title>
+  <link rel="stylesheet" href="/css/style.css">
 </head>
-<body>
-    
+<body class="page">
+
+  <!-- HEADER (plein largeur, noir) -->
+  <header class="header">
+      <a href="#" class="header__logo">Logo wawwwww</a>
+      <nav class="header__nav" aria-label="Navigation principale">
+        <ul class="header__menu">
+          <li class="header__item"><a class="header__link" href="#">Showcase</a></li>
+          <li class="header__item"><a class="header__link" href="#">Services</a></li>
+          <li class="header__item"><a class="header__link" href="#">Portfolio</a></li>
+        </ul>
+      </nav>
+  </header>
+
+  <!-- CONTENU PRINCIPAL : 4 sections distinctes -->
+  <main class="page__main">
+    <section class="section section--1" id="section-1">
+        <h1 class="section__title">Section 1</h1>
+    </section>
+
+
+    <section class="section section--2" id="section-2">
+        <h2 class="section__title">Section 2</h2>
+    </section>
+
+    <!-- Section 3 : #FFFFFF -> #FEA05C -> #FE9D57 -> #4D86EB -->
+    <section class="section section--3" id="section-3">
+        <h2 class="section__title">Section 3 </h2>
+    </section>
+
+    <!-- Section 4 : #4D86EB -> #FFFFFF -->
+    <section class="section section--4" id="section-4">
+        <h2 class="section__title">Section 4</h2>
+    </section>
+  </main>
+
+  <!-- FOOTER (plein largeur, noir) -->
+  <footer class="footer footer--black page__footer">
+      <p class="footer__text">© 2025 — Tech Bros</p>
+  </footer>
+
 </body>
 </html>
