ajout separateur header

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body class="page">
   <header class="header">
       <a href="#" class="header__logo">Logo wawwwww</a>
+      <hr class="header__divider">
       <nav class="header__nav" aria-label="Navigation principale">
         <ul class="header__menu">
           <li class="header__item"><a class="header__link" href="#">Showcase</a></li>
