--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body class="page">
   <header class="header">
-      <a href="#" class="header__logo">Logo wawwwww</a>
+      <a href="#" class="header__logo">Logo waw</a>
       <hr class="header__divider">
       <nav class="header__nav" aria-label="Navigation principale">
         <ul class="header__menu">
@@ -21,16 +21,16 @@
   </header>
   <main class="page__main">
     <section class="section section--1" id="section-1">
-        <h1 class="section__title">Section 1</h1>
+        <h1 class="section__title">Design</h1>
     </section>
     <section class="section section--2" id="section-2">
-        <h2 class="section__title">Section 2</h2>
+        <h2 class="section__title">HTML</h2>
     </section>
     <section class="section section--3" id="section-3">
-        <h2 class="section__title">Section 3 </h2>
+        <h2 class="section__title">CSS </h2>
     </section>
     <section class="section section--4" id="section-4">
-        <h2 class="section__title">Section 4</h2>
+        <h2 class="section__title">Github</h2>
     </section>
   </main>
   <footer class="footer footer--black page__footer">
