video test drive

--- a/index.html
+++ b/index.html
@@ -19,13 +19,15 @@
         </ul>
       </nav>
 
-<div class="video-container">
+<!-- <div class="video-container">
   <video controls>
     <source src="https://drive.google.com/drive/folders/1RZA-AfY7wjohYvxPok6a3OEf9iX6KNVP" type="video/mp4">
   </video>
-</div>
+</div> -->
 
-<iframe src="https://cegepsaintefoy-my.sharepoint.com/personal/2442173_csfoy_ca/_layouts/15/embed.aspx?UniqueId=277db0ff-d939-4f4a-bcfc-207b1520c4b0&embed=%7B%22af%22%3Atrue%2C%22ust%22%3Atrue%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create" width="640" height="360" frameborder="0" scrolling="no" allowfullscreen title="tech-bro.mp4"></iframe>
+<iframe src="https://drive.google.com/drive/folders/1RZA-AfY7wjohYvxPok6a3OEf9iX6KNVP" width="640" height="360" frameborder="0" scrolling="no" allowfullscreen title="tech-bro.mp4"></iframe>
+
+<!-- <iframe src="https://cegepsaintefoy-my.sharepoint.com/personal/2442173_csfoy_ca/_layouts/15/embed.aspx?UniqueId=277db0ff-d939-4f4a-bcfc-207b1520c4b0&embed=%7B%22af%22%3Atrue%2C%22ust%22%3Atrue%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create" width="640" height="360" frameborder="0" scrolling="no" allowfullscreen title="tech-bro.mp4"></iframe> -->
 
   </header>
   <main class="page__main">
