--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   </video>
 </div> -->
 
+<p>VIDEO ACCÈS DRIVE</p>
 <iframe src="https://drive.google.com/drive/folders/1RZA-AfY7wjohYvxPok6a3OEf9iX6KNVP" width="640" height="360" frameborder="0" scrolling="no" allowfullscreen title="tech-bro.mp4"></iframe>
 
 <!-- <iframe src="https://cegepsaintefoy-my.sharepoint.com/personal/2442173_csfoy_ca/_layouts/15/embed.aspx?UniqueId=277db0ff-d939-4f4a-bcfc-207b1520c4b0&embed=%7B%22af%22%3Atrue%2C%22ust%22%3Atrue%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create" width="640" height="360" frameborder="0" scrolling="no" allowfullscreen title="tech-bro.mp4"></iframe> -->
